<resources>
    <string name="app_name">BaseProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_address">Delivery address</string>
    <string name="address_type_icon">Address type icon</string>
    <string name="edit"><u>Edit</u></string>
    <string name="my_office">My Office</string>
    <string name="send_to">SEND TO</string>
    <string name="add_new_address">Add new address</string>
    <string name="return_button_icon">Return button Icon</string>
    <string name="add_address">Add Address</string>
    <string name="address_name">Address name</string>
    <string name="full_address">Full Address</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="address_type">Address Type:</string>
    <string name="please_choose_type">Please choose type</string>
    <string name="address_name_is_required">Address name is required!</string>
    <string name="address_is_required">Address is required!</string>
    <string name="update_address">Update Address</string>
    <string name="delete_address">Delete address</string>
</resources>